[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/scripts/ui/focus_button.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/menu_tick.wav" type="AudioStream" id=2]


[node name="FocusButton" type="Button"]
margin_right = 104.0
margin_bottom = 31.0
text = "Resume"
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundSnap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"
[connection signal="focus_entered" from="." to="." method="_on_FocusButton_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_FocusButton_mouse_entered"]
